# vigil

./: .editorconfig  .gitignore  .prettierignore  AGENTS.md  LICENSE  README.md  clippy.toml  eslint.config.js  package-lock.json  package.json  rustfmt.toml
.github/: pull_request_template.md
docs/: README.md  (+5 more)
src-tauri/: Cargo.toml  README.md  tauri.conf.json
src-tauri/capabilities/: README.md  default.json
src-tauri/icons/: icon.icns
src-tauri/src/: README.md  lib.rs  main.rs
src-tauri/src/commands/: README.md  fs.rs  git.rs  links.rs  mod.rs  search.rs  status.rs  workspace.rs
src-tauri/src/core/: README.md  mod.rs  perf.rs
src-tauri/src/core/content/: README.md  mod.rs  service.rs
src-tauri/src/core/fs/: README.md  mod.rs  service.rs
src-tauri/src/core/git/: README.md  mod.rs  service.rs  status.rs
src-tauri/src/core/graph/: README.md  mod.rs
src-tauri/src/core/index/: README.md  metrics.rs  mod.rs  service.rs  tag_index.rs  watcher.rs
src-tauri/src/core/links/: README.md  mod.rs  parser.rs  service.rs
src-tauri/src/core/plugins/: README.md  mod.rs
src-tauri/src/core/search/: README.md  mod.rs  service.rs
src-tauri/src/events/: README.md  fs_events.rs  git_events.rs  index_events.rs  mod.rs  status_events.rs
src-tauri/src/models/: README.md  error.rs  files.rs  git.rs  links.rs  mod.rs  search.rs  status.rs  workspace.rs
src-tauri/src/state/: README.md  mod.rs
src-tauri/tests/: README.md  fs_commands.rs  git_worker.rs  hardening.rs  index_search.rs  integration_workflows.rs  links.rs  perf_budget.rs  smoke_matrix.rs  status.rs
(+281 files in other folders)
