[package]
name = "vigil"
version = "0.0.1"
description = "Lightning-fast editing. Interconnected thinking."
authors = ["Vigil Contributors"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "vigil_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Git operations
git2 = "0.19"

# Filesystem traversal
walkdir = "2"
ignore = "0.4"

# File system watcher
notify = "7"

# Concurrency primitives
crossbeam-channel = "0.5"
parking_lot = "0.12"

# Fuzzy matching (omnibar)
nucleo-matcher = "0.3"

# Unique identifiers
uuid = { version = "1", features = ["v4"] }

# Timestamps
chrono = { version = "0.4", features = ["serde"] }

# Pattern matching (link/tag parsing)
regex = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
